# combinations

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Readme.md  combinations.geany
combinations/: CMakeLists.txt  combinations.cpp  combinations.h  main.cpp  test.cpp
